# rust-axum-api-example

./: .env  Cargo.toml  LICENSE
migrations/: setup.up.sql
src/: main.rs  models.rs
src/handlers/: handlers_inner.rs  mod.rs
src/persistance/: answers_dao.rs  mod.rs  questions_dao.rs
