[package]
name = "rust-axum-api-example"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.203", features = ["derive"]}
tokio = {version = "1.38.0", features = ["full"]}
axum = "0.7.5"
sqlx = {version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "time", "uuid"]}
dotenvy = "0.15.7"
log = "0.4.22"
pretty_env_logger = "0.5.0"
async-trait = "0.1.80"
thiserror = "1.0.61"
